# fm-session-service

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  README_TEMPLATE.md  SERVICE_EXTRACTION_MAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  policy-no-direct-k8s-deploy.yml  sync-to-enterprise.yml
scripts/: generate_readme.py
src/session_service/: main.py
src/session_service/api/routes/: __init__.py  sessions.py
src/session_service/config/: __init__.py  settings.py
src/session_service/core/: __init__.py  session_manager.py
src/session_service/infrastructure/redis/: __init__.py  client.py
src/session_service/models/: __init__.py  session.py
tests/: conftest.py
tests/unit/: test_session_manager.py  test_session_routes.py
